--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <nav id="navbar" class="navbar">
           <ul>
-            <li><a href="#hero">Home</a></li>
+            <li><a href="#hero">Beranda</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#partner">Mitra</a></li>
