--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
           <div class="mb-3">
             <iframe
               style="border: 0; width: 100%; height: 350px"
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.0826134980434!2d113.21220029999999!3d-7.781065299999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7ad6b8755d0d3%3A0x1b9ba568160d2329!2sMie%20Ayam%20Ceker%20%26%20Bakso%20%22Cak%20Isol%22!5e0!3m2!1sen!2sid!4v1710946639926!5m2!1sen!2sid"
               frameborder="0"
               allowfullscreen
             ></iframe>
@@ -508,7 +508,7 @@
                 <i class="icon bi bi-map flex-shrink-0"></i>
                 <div>
                   <h3>Our Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Jl. Mastrip, Kanigaran, Kec. Kedopok, Kota Probolinggo, Jawa Timur 67213</p>
                 </div>
               </div>
             </div>
@@ -530,7 +530,7 @@
                 <i class="icon bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+62 000 000 000</p>
                 </div>
               </div>
             </div>
@@ -550,66 +550,6 @@
             </div>
             <!-- End Info Item -->
           </div>
-
-          <form
-            action="forms/contact.php"
-            method="post"
-            role="form"
-            class="php-email-form p-3 p-md-4"
-          >
-            <div class="row">
-              <div class="col-xl-6 form-group">
-                <input
-                  type="text"
-                  name="name"
-                  class="form-control"
-                  id="name"
-                  placeholder="Your Name"
-                  required
-                />
-              </div>
-              <div class="col-xl-6 form-group">
-                <input
-                  type="email"
-                  class="form-control"
-                  name="email"
-                  id="email"
-                  placeholder="Your Email"
-                  required
-                />
-              </div>
-            </div>
-            <div class="form-group">
-              <input
-                type="text"
-                class="form-control"
-                name="subject"
-                id="subject"
-                placeholder="Subject"
-                required
-              />
-            </div>
-            <div class="form-group">
-              <textarea
-                class="form-control"
-                name="message"
-                rows="5"
-                placeholder="Message"
-                required
-              ></textarea>
-            </div>
-            <div class="my-3">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">
-                Your message has been sent. Thank you!
-              </div>
-            </div>
-            <div class="text-center">
-              <button type="submit">Send Message</button>
-            </div>
-          </form>
-          <!--End Contact Form -->
         </div>
       </section>
       <!-- End Contact Section -->
@@ -625,8 +565,8 @@
             <div>
               <h4>Address</h4>
               <p>
-                A108 Adam Street <br />
-                New York, NY 535022 - US<br />
+                l. Mastrip, Kanigaran, Kec. Kedopok <br />
+                Kota Probolinggo, Jawa Timur 67213<br />
               </p>
             </div>
           </div>
@@ -636,7 +576,7 @@
             <div>
               <h4>Reservations</h4>
               <p>
-                <strong>Phone:</strong> +1 5589 55488 55<br />
+                <strong>Phone:</strong> +62 000 000<br />
                 <strong>Email:</strong> info@example.com<br />
               </p>
             </div>
