--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 <i class="icon bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>contact@example.com</p>
+                  <p>Cakisol@gmail.com</p>
                 </div>
               </div>
             </div>
