feat form message to whatsapp

--- a/index.html
+++ b/index.html
@@ -549,6 +549,22 @@
               </div>
             </div>
             <!-- End Info Item -->
+            <form action="/" method="post" role="form" class="php-email-form p-3 p-md-4">
+              <div class="row">
+                <div class="form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
+                </div>
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" name="message" rows="5" placeholder="Message" required=""></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit" id="submit-message">Send Message</button></div>
+            </form>
           </div>
         </div>
       </section>
@@ -602,6 +618,7 @@
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
+          
         </div>
       </div>
 
