--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required=""></textarea>
+                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message" required=""></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
