--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/mie-ayam.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Mie Ayam</p>
@@ -112,7 +112,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/mie-ayam.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Mie Ayam Spesial</p>
@@ -123,7 +123,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/mie-ayam.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Mie Ayam Lengkap</p>
@@ -134,7 +134,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/mie-ceker.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Mie Ayam Ceker</p>
@@ -145,7 +145,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/mie-pentol.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Mie Ayam Pentol</p>
@@ -156,7 +156,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/mie-ceker.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Mie Ayam Ceker Pentol</p>
@@ -167,7 +167,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/pop-ice.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Pop Ice</p>
@@ -178,7 +178,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/teh.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Es Teh</p>
@@ -189,7 +189,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/jeruk.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Es Jeruk</p>
@@ -200,7 +200,7 @@
                 <div class="col-lg-3 menu-item">
                   <img
                     src="assets/img/kopi.png"
-                    class="menu-img img-fluid"
+                    class="menu-img img-fluid rounded"
                     alt=""
                   />
                   <p class="fw-bold">Kopi</p>
