--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
             <div>
               <h4>Address</h4>
               <p>
-                l. Mastrip, Kanigaran, Kec. Kedopok <br />
+                Jl. Mastrip, Kanigaran, Kec. Kedopok <br />
                 Kota Probolinggo, Jawa Timur 67213<br />
               </p>
             </div>
@@ -593,7 +593,7 @@
               <h4>Reservations</h4>
               <p>
                 <strong>Phone:</strong> +62 000 000<br />
-                <strong>Email:</strong> info@example.com<br />
+                <strong>Email:</strong> cakisol@gmail.com<br />
               </p>
             </div>
           </div>
