--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         </nav>
         <!-- .navbar -->
 
-        <a class="btn-book-a-table" href="#book-a-table">Pesan Sekarang</a>
+        <a class="btn-book-a-table" href="https://api.whatsapp.com/send?phone=6285648867199&text=Halo%20Cak%20Isol,%20saya%20" target="_blank">Pesan Sekarang</a>
+        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       </div>
     </header>
     <!-- End Header -->
