--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h2 data-aos="fade-up">Mie Ayam &<br>Bakso Cak Isol</h2>
           <p data-aos="fade-up" data-aos-delay="100">Duit anda pas-pas an tapi anda ingin makan ? Mie Ayam Bakso Cak Isol Solusinya!</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#book-a-table" class="btn-book-a-table">Pesan Sekarang</a>
+            <a href="https://api.whatsapp.com/send?phone=6285648867199&text=Halo%20Cak%20Isol,%20saya%20" target="_blank" class="btn-book-a-table">Pesan Sekarang</a>
           </div>
         </div>
         <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
