fixed sudah rapi
done

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li><a href="#menu">Menu</a></li>
             <li><a href="#partner">Mitra</a></li>
             <li><a href="#testimonials">Testimoni</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Kontak</a></li>
         </nav>
         <!-- .navbar -->
 
@@ -451,8 +451,8 @@
       <section id="contact" class="contact">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h2>Contact</h2>
-            <p>Need Help? <span>Contact Us</span></p>
+            <h3>Kontak</h3>
+            <p>Berminat? <span>Hubungi kontak dibawah ini</span></p>
           </div>
 
           <div class="mb-3">
@@ -470,7 +470,7 @@
               <div class="info-item d-flex align-items-center">
                 <i class="icon bi bi-map flex-shrink-0"></i>
                 <div>
-                  <h3>Our Address</h3>
+                  <h3>Alamat</h3>
                   <p>Jl. Mastrip, Kanigaran, Kec. Kedopok, Kota Probolinggo, Jawa Timur 67213</p>
                 </div>
               </div>
@@ -481,7 +481,7 @@
               <div class="info-item d-flex align-items-center">
                 <i class="icon bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email Us</h3>
+                  <h3>Email</h3>
                   <p>Cakisol@gmail.com</p>
                 </div>
               </div>
@@ -492,8 +492,8 @@
               <div class="info-item d-flex align-items-center">
                 <i class="icon bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
-                  <p>+62 000 000 000</p>
+                  <h3>Nomor HP</h3>
+                  <p>+625648867199</p>
                 </div>
               </div>
             </div>
@@ -503,33 +503,35 @@
               <div class="info-item d-flex align-items-center">
                 <i class="icon bi bi-share flex-shrink-0"></i>
                 <div>
-                  <h3>Opening Hours</h3>
+                  <h3>Jam Buka</h3>
                   <div>
-                    <strong>Mon-Sat:</strong> 11AM - 23PM;
-                    <strong>Sunday:</strong> Closed
+                    <strong>Setiap Hari</strong> Jam 8 Pagi - 9 Malam
                   </div>
                 </div>
               </div>
             </div>
             <!-- End Info Item -->
+            <div class="section-header">
+              <p>Pesan Disini</p>
+            
             <form action="/" method="post" role="form" class="php-email-form p-3 p-md-4">
               <div class="row">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Masukkan Namamu..." required="">
                 </div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message" required=""></textarea>
+                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Masukkan Detail Pesanan dan Jumlahnya..." required=""></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit" id="submit-message">Send Message</button></div>
+              <div class="text-center"><button type="submit" id="submit-message">Pesan Sekarang</button></div>
             </form>
           </div>
-        </div>
+        </div></div>
       </section>
       <!-- End Contact Section -->
     </main>
@@ -542,7 +544,7 @@
           <div class="col-lg-3 col-md-6 d-flex">
             <i class="bi bi-geo-alt icon"></i>
             <div>
-              <h4>Address</h4>
+              <h4>Alamat</h4>
               <p>
                 Jl. Mastrip, Kanigaran, Kec. Kedopok <br />
                 Kota Probolinggo, Jawa Timur 67213<br />
@@ -553,9 +555,9 @@
           <div class="col-lg-3 col-md-6 footer-links d-flex">
             <i class="bi bi-telephone icon"></i>
             <div>
-              <h4>Reservations</h4>
+              <h4>Kontak</h4>
               <p>
-                <strong>Phone:</strong> +62 000 000<br />
+                <strong>Nomor HP:</strong> +625648867199<br />
                 <strong>Email:</strong> cakisol@gmail.com<br />
               </p>
             </div>
@@ -564,21 +566,19 @@
           <div class="col-lg-3 col-md-6 footer-links d-flex">
             <i class="bi bi-clock icon"></i>
             <div>
-              <h4>Opening Hours</h4>
+              <h4>Jam Buka</h4>
               <p>
-                <strong>Mon-Sat: 11AM</strong> - 23PM<br />
-                Sunday: Closed
+                <strong>Setiap Hari ></strong> Jam 8 Pagi - 9 Malam
               </p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Follow Us</h4>
+            <h4>Ikuti Kami</h4>
             <div class="social-links d-flex">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://twitter.com/parid399" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://web.facebook.com/kuridIrid" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/parid_idn/" class="instagram"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
           
