--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
             <div class="col-md-6">
               <div class="info-item d-flex align-items-center">
-                <i class="icon bi bi-share flex-shrink-0"></i>
+                <i class="icon bi bi-clock icon flex-shrink-0"></i>
                 <div>
                   <h3>Jam Buka</h3>
                   <div>
